--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,5 +3,5 @@ main = "src/worker.ts"
 compatibility_date = "2023-08-14"
 
 kv_namespaces = [
-  { binding = "settings", id = "KV_NAME" }
+  { binding = "settings", id = "WVV1C2-RzZlT7MBxLSPq3ZTLJohhnthwcrc2FEeO" }
 ]
